--- a/b.html
+++ b/b.html
@@ -129,7 +129,7 @@
             -->
 
             <div class="appointments-container">
-                <p class="appointments-container-name"><b>Available Appointments </b><i>(by date)</i></p>
+                <p class="appointments-container-name"><b>Schedule Available Appointments </b><i>(by date)</i></p>
                 <div class="divider"></div>
 
                 <div class="appointment-row">
